<resources>
    <string name="app_name">HoYo Assistant</string>
    <string name="hoyo_assistant" translatable="false">HoYo Assistant</string>
    <string name="genshin">Genshin\u00A0</string>
    <string name="honkai_sr">Honkai: Star Rail\u00A0</string>
    <string name="zzz">Zenless Zone Zero\u00A0</string>
    <string name="check_in">Check-in\u00A0</string>
    <string name="genshin_uid">Genshin UID</string>
    <string name="nickname">Nickname</string>
    <string name="cookie">Cookie</string>
    <string name="server">Server</string>
    <string name="refresh_cycle">Data Update Cycle</string>
    <string name="notification">Notification</string>
    <string name="auto_check_in">Auto Check-in</string>
    <string name="time_notation">Time Notation</string>
    <string name="preview">Preview</string>
    <string name="widget_theme">Widget Theme</string>
    <string name="background_transparency">Background Transparency</string>
    <string name="font_size">Font Size</string>
    <string name="image">Image</string>
    <string name="identifier">Identifier</string>
    <string name="select_character">Select Character</string>
    <string name="select_character_title">Characters to display in the widget</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="not_show_today">Do not show today</string>
    <string name="time">\u0020time</string>
    <string name="times">\u0020times</string>
    <string name="uid" translatable="false">UID</string>
    <string name="nickname_">Nickname</string>
    <string name="new_hoyolab_account">New HoYoLAB Account</string>
    <string name="hoyolab_checkin">HoYoLAB Check-in</string>
    <string name="widget_customizing">Widget Design Customizing</string>
    <string name="hoyolab_checkin_desc">For the first time, press the \'HoYoLAB Check-in\' button to check in manually so that automatic check-in works properly.</string>
    <string name="hoyolab_checkin_desc_2">Automatic check-in is performed based on the account under My Info &gt; My Characters in HoYoLAB.</string>
    <string name="save_setting">Save Setting</string>
    <string name="add_widget">Add Widget</string>
    <string name="btn_custom">Custom</string>
    <string name="noti_at_value">At %1$s</string>
    <string name="dialog_title_custom_noti">%1$s alert value</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="save_add">Save and add widgets</string>
    <string name="no_hoyolab_accounts">No HoYoLAB account registered.</string>
    <string name="get_cookie">Click here after Login!</string>
    <string name="get_cookie_btn">Log in to get cookies</string>
    <string name="get_uid_btn">Get In-game data using Cookie</string>
    <string name="asia" translatable="false">Asia</string>
    <string name="america" translatable="false">America</string>
    <string name="europe" translatable="false">Europe</string>
    <string name="cht" translatable="false">TK, HT, MO</string>
    <string name="disable">Manual</string>
    <string name="time_15m">15m</string>
    <string name="time_30m">30m</string>
    <string name="time_1h">1h</string>
    <string name="btn_each_40_resin">Every 40</string>
    <string name="btn_180_resin">At 180</string>
    <string name="resin">Resin</string>
    <string name="btn_expedition_done">Expedition Done</string>
    <string name="btn_assignment_done">Assignment Done</string>
    <string name="btn_home_coin_full">Realm Currency</string>
    <string name="btn_param_reached">Parametric Transformer</string>
    <string name="btn_daily_commission_yet">Daily commissions left</string>
    <string name="btn_weekly_boss_yet">Weekly boss left</string>
    <string name="btn_daily_training_yet">Daily training left</string>
    <string name="btn_echo_of_war_yet">Echo of War left</string>
    <string name="btn_engagement_yet">Engagement left</string>
    <string name="btn_bounty_commission_yet">Bounty commission left</string>
    <string name="btn_reserve_full">Reserve full</string>
    <string name="btn_period_score_yet">Cycle score left</string>
    <string name="btn_member_claim_yet">Membership unclaimed</string>
    <string name="btn_member_expire_soon">Membership expiring</string>
    <string name="btn_cafe_yet">COFF Café not visited</string>
    <string name="trailblaze_power">Trailblaze Power</string>
    <string name="btn_each_60_trailblaze_power">Every 60</string>
    <string name="btn_290_trailblaze_power">At 290</string>
    <string name="battery">Battery</string>
    <string name="btn_each_40_battery">Every 40</string>
    <string name="btn_each_60_battery">Every 60</string>
    <string name="btn_230_battery">At 230</string>
    <string name="btn_remain_time">Remaining time</string>
    <string name="btn_full_charge_time">Fully charged at</string>
    <string name="btn_disable">Hide</string>
    <string name="btn_dark">Dark</string>
    <string name="btn_light">Light</string>
    <string name="btn_automatic">Automatic</string>
    <string name="btn_visible">Show</string>
    <string name="btn_invisible">Hide</string>
    <string name="btn_auto_check_in_enable">Genshin Impact</string>
    <string name="btn_auto_check_in_enable_honkai_3rd">Honkai Impact 3rd</string>
    <string name="btn_auto_check_in_enable_honkai_sr">Honkai: Star Rail</string>
    <string name="btn_auto_check_in_enable_zzz">Zenless Zone Zero</string>
    <string name="btn_start_check_in">Check-in on Save</string>
    <string name="btn_check_in_success">Success</string>
    <string name="btn_check_in_failed">Failure</string>
    <string name="done">Done</string>
    <string name="date_st">st</string>
    <string name="date_nd">nd</string>
    <string name="date_rd">rd</string>
    <string name="date_th">th</string>
    <string name="permission_accept">Grant Permission</string>
    <string name="data_save_mode_disable">Turn off Data Saver</string>
    <string name="native_hoyolab_account">HoYoLAB Account</string>
    <string name="sns_account">SNS Account</string>
    <string name="data_save_mode_not_supported">Data Saver is not supported below Android 7.</string>
    <string name="msg_toast_widget_pin_not_supported">The launcher does not support widget pinning.</string>
    <string name="msg_toast_widget_pin_supports_android_8">This feature is supported on Android 8.0 and above.</string>
    <string name="dialog_title_permission">Allowing permission</string>
    <string name="dialog_msg_permission_storage">To preview the design on your actual wallpaper while customizing the widget, storage permission is required.\n\nYou can use the app even if you reject the permission.</string>
    <string name="dialog_msg_permission_antidoze">Power saving exclusion is required to prevent problems with widget refresh/auto check in due to issues such as low battery/sleep mode.\n\nYou can use the app even if you deny the permission.</string>
    <string name="msg_toast_widget_no_account">You can\'t use widgets without a linked HoYoLAB account!</string>
    <string name="msg_toast_widget_no_account_select">Select the HoYoLAB account to display in the widget!</string>
    <string name="msg_toast_miniwidget_no_type">Select 1 data type to display in the widget!</string>
    <string name="dialog_widget_refresh_not_work">Refresh doesn\'t work on the Widget?</string>
    <string name="dialog_msg_widget_refresh_not_work">If your device is in power saving mode or Data Saver mode, the widget may not refresh.\n\nYou can turn off Data Saver in Settings, or work around it by allowing access for the Genshin &amp; Star Rail widget on the next screen.\n\nThis permission lets the app access notifications received by the device. However, the Genshin &amp; Star Rail widget uses the notification listener only to receive HoYoLAB data and never accesses your personal information.\n\nWe recommend turning off Data Saver.</string>
    <string name="dialog_native_hoyolab_account">Check Your Account</string>
    <string name="dialog_msg_native_hoyolab_account">When using the HoYoLAB, Google, Apple account, Press <b>HoYoLAB Account</b> button.\nWhen using the Facebook, Twitter account, Press <b>SNS Account</b> button to manually obtain cookies.</string>
    <string name="dialog_restart">Restart Application</string>
    <string name="dialog_msg_restart">Restart the app to apply the changes.</string>
    <string name="dialog_msg_dailynote_not_public_error_repeat">If the Battle Chronicle private error occurs repeatedly, please check that you entered the correct UID.</string>
    <string name="dialog_realtime_note_private">Realtime Notes is Private</string>
    <string name="dialog_msg_realtime_note_private">Your Real-Time Note is private and data cannot be imported. Do you want to change it to public?</string>
    <string name="character_list_all">All Characters</string>
    <string name="character_list_possession">Owned Characters</string>
    <string name="character_list_empty">Selected characters are displayed in the talent widget\nwhen you can obtain required Talent Level-Up Materials.</string>
    <string name="msg_toast_back_button">Press once more to exit the app!</string>
    <string name="msg_toast_save_done">Saved!</string>
    <string name="msg_toast_save_done_check_in">Saved! Check the check-in result at the top bar!</string>
    <string name="msg_toast_common_network_error">Failed to connect to HoYoLAB server. Check the network status of the device!</string>
    <string name="msg_toast_common_body_null_error">HoYoLAB did not provide the necessary information. It might be a server error, so please try again later!</string>
    <string name="msg_toast_dailynote_success">Real-Time Note retrieved!</string>
    <string name="msg_toast_dailynote_error_charactor_info">Can\'t read character information. Please check again UID, cookies, and server!</string>
    <string name="msg_toast_dailynote_error_internal_database_error">Error occurred in HoYoLAB\'s database, so can\'t get Real-Time Note !</string>
    <string name="msg_toast_dailynote_error_too_many_requests">Too many attempts today. Please try again later.</string>
    <string name="msg_toast_dailynote_error_not_logged_in">Can\'t get data because it\'s a wrong cookie. Check the cookie again!</string>
    <string name="msg_toast_dailynote_error_not_logged_in_3">It\'s the right cookie, but can\'t get a Real-Time Note because no HoYoLAB account linked to this cookie!</string>
    <string name="msg_toast_dailynote_error_wrong_account">Can\'t get data from another user\'s UID! Check that the HoYoLAB account the cookie came from is linked to this UID\'s Genshin account!</string>
    <string name="msg_toast_dailynote_error_data_not_public">Can\'t receive data because your Battle Chronicle is private. In HoYoLAB Settings, please set your Battle Chronicle to public!</string>
    <string name="msg_toast_dailynote_error_account_not_found">Can\'t get Real-Time Note because no Genshin account linked with this HoYoLAB account!</string>
    <string name="hint_cookie">Enter HoYoLAB\'s cookie!</string>
    <string name="hint_uid">Enter UID!</string>
    <string name="widget_label_genshin_detail">Genshin Detail Widget</string>
    <string name="widget_label_resin_resizable">Resizable Resin Widget</string>
    <string name="widget_label_resin_fixed">Fixed-size Resin Widget</string>
    <string name="widget_label_talent">Talent Materials Widget</string>
    <string name="widget_label_mini">Genshin Mini Widget</string>
    <string name="widget_label_trailblaze_power">Trailblaze Power Widget</string>
    <string name="widget_label_hksr_detail">Honkai: Star Rail Detail Widget</string>
    <string name="widget_label_battery">Battery Widget</string>
    <string name="widget_label_zzz_detail">ZZZ Detail Widget</string>
</resources>