<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="danggai.domain.util.Constant.Server" />

        <variable
            name="vm"
            type="danggai.app.presentation.ui.main.MainViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.main.MainFragment">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold|italic" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_asia"
                        style="@style/RadioButton"
                        android:layout_marginEnd="5dp"
                        android:onClick="@{() -> vm.onClickSetServer(Server.ASIA)}"
                        android:text="@string/asia" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_usa"
                        style="@style/RadioButton"
                        android:layout_marginEnd="5dp"
                        android:onClick="@{() -> vm.onClickSetServer(Server.USA)}"
                        android:text="@string/america" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_euro"
                        style="@style/RadioButton"
                        android:layout_marginEnd="5dp"
                        android:onClick="@{() -> vm.onClickSetServer(Server.EUROPE)}"
                        android:text="@string/europe" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_cht"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetServer(Server.CHT)}"
                        android:text="@string/cht" />

                </RadioGroup>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cookie"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold|italic" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_cookie"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cookie"
                    android:singleLine="true"
                    android:text="@={vm.sfCookie}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="end"
                    android:onClick="@{()->vm.onClickGetCookie()}"
                    android:text="@string/get_cookie"
                    android:textColor="@color/light_blue_600"
                    android:textSize="14sp"
                    android:textStyle="italic" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/uid"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold|italic" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_uid"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_uid"
                    android:singleLine="true"
                    android:text="@={vm.sfUid}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="end"
                    android:onClick="@{()->vm.onClickGetUid()}"
                    android:text="@string/get_uid"
                    android:textColor="@color/light_blue_600"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_cycle"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold|italic" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_disable"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetAutoRefreshPeriod(-1L)}"
                        android:text="Disable" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_15m"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetAutoRefreshPeriod(15L)}"
                        android:text="15m" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_30m"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetAutoRefreshPeriod(30L)}"
                        android:text="30m" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_1h"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetAutoRefreshPeriod(60L)}"
                        android:text="1h" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_2h"
                        style="@style/RadioButton"
                        android:onClick="@{() -> vm.onClickSetAutoRefreshPeriod(120L)}"
                        android:text="2h" />

                </RadioGroup>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold|italic" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        style="@style/Checkbox"
                        android:id="@+id/cb_each_40resin"
                        android:checked="@={vm.sfEnableNotiEach40Resin}"
                        android:text="@string/btn_each_40_resin" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        style="@style/Checkbox"
                        android:id="@+id/cb_140resin"
                        android:checked="@={vm.sfEnableNoti140Resin}"
                        android:text="@string/btn_140_resin"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            style="@style/Checkbox"
                            android:id="@+id/cb_custom_resin"
                            android:layout_width="32dp"
                            android:layout_marginEnd="0dp"
                            android:checked="@={vm.sfEnableNotiCustomResin}" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_custom_resin"
                            style="@style/EditTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="160"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingHorizontal="8dp"
                            android:singleLine="true"
                            android:text="@={vm.sfCustomNotiResin}"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resin"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        style="@style/Checkbox"
                        android:id="@+id/cb_expedition_done"
                        android:checked="@={vm.sfEnableNotiExpeditionDone}"
                        android:text="@string/btn_expedition_done" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.checkbox.MaterialCheckBox
                        style="@style/Checkbox"
                        android:id="@+id/cb_home_coin_full"
                        android:checked="@={vm.sfEnableNotiHomeCoinFull}"
                        android:text="@string/btn_home_coin_full" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_customizing"
                    android:textColor="@color/black"
                    android:onClick="@{()->vm.onClickWidgetDesign()}"
                    android:backgroundTint="@color/light_blue_200"
                    app:icon="@drawable/baseline_manage_accounts_24"
                    app:iconSize="26dp"
                    app:iconTint="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold|italic"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:onClick="@{()->vm.onClickSave()}"
                    android:backgroundTint="@color/light_blue_200"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{()->vm.onClickWidgetRefreshNotWork()}"
                    android:text="@string/dialog_widget_refresh_not_work"
                    android:textColor="@color/light_blue_600"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>